[package]
name = "fp-web-patcher"
version = "0.1.0"
authors = ["imaandrew"]
edition = "2021"
description = "A wasm application that makes it easy to patch N64 roms for multiple platforms"
repository = "https://github.com/imaandrew/fp-web-patcher/"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
adler32 = "1.2.0"
aes = "0.8.3"
cbc = { version = "0.1.2", features = ["alloc"] }
console_error_panic_hook = "0.1.7"
hex = "0.4.3"
serde = { version = "1.0.164", features = ["derive"] }
serde-wasm-bindgen = "0.5.0"
sha-1 = "0.10.1"
thiserror = "1.0.40"
wasm-bindgen = "0.2.87"
